fix overflow logic

--- a/src/incident/incident-panel.less
+++ b/src/incident/incident-panel.less
@@ -6,6 +6,7 @@
     flex-direction: column;
     margin-top: 8px;
     z-index: 100;
+    overflow-y: auto;
 
     .panel-header {
         padding-left: 4px;
