--- a/src/main.less
+++ b/src/main.less
@@ -6,13 +6,8 @@ html {
     font-family: 'Courier New', Courier, monospace;
 }
 
-body {
-    height: 100%;
-}
-
 .content-area {
-    width: 100%;
-    height: 100%;
+    flex: 1 1 auto;
 }
 
 .content-float {
@@ -24,8 +19,6 @@ body {
 }
 
 .content-container {
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: row;
 }
