--- a/src/views/incidents/view-incident.less
+++ b/src/views/incidents/view-incident.less
@@ -12,7 +12,6 @@
 
 .error-message {
     background-color: white;
-    margin: auto;
     text-align: center;
     padding: 64px 0;
     position: absolute;
